<resources>
    <string name="app_name">WODDiary</string>
    <string name="text_feed">Feed</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_timer">Timer</string>
    <string name="text_program_builder">Program</string>
    <string name="error">Error</string>
    <string name="no_exercises_added_yet">No exercises added yet</string>
    <string name="title_activity_add_exercise">AddExerciseActivity</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="_reps">reps with </string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="fill_name">Fill name</string>
    <string name="fill_sets">Fill sets</string>
    <string name="add_exercise">Add exercise</string>
    <string name="d_set">%d set: </string>
    <string name="kg">kg</string>
</resources>
