<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_feed"
        android:enabled="true"
        android:icon="@drawable/ic_feed_black_24dp"
        android:title="@string/text_feed"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_calendar_black_24dp"
        android:title="@string/text_calendar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_program_builder"
        android:enabled="true"
        android:icon="@drawable/ic_program_black_24dp"
        android:title="@string/text_program_builder"
        app:showAsAction="ifRoom" />

    <!--<item-->
        <!--android:id="@+id/action_timer"-->
        <!--android:enabled="false"-->
        <!--android:icon="@drawable/ic_timer_black_24dp"-->
        <!--android:title="@string/text_timer"-->
        <!--app:showAsAction="ifRoom" />-->

</menu>