<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:showIn="@layout/add_exercise_layout"
    android:gravity="center_vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/et_reps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reps"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="numberDecimal"/>

    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/ib_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/title_activity_add_exercise"
        android:padding="10dp"
        android:src="@drawable/ic_remove_accent_24dp"/>

</LinearLayout>